# keyboard-stats

./: LICENSE  README.md  keyboard-stats.cabal
src/: Main.hs
src/Keyboard/: Stats.hs
src/main/: KeyboardStats.hs  XInputKeylogger.hs
static/css/: default.css
